propagate-params-filter/config/mesh/hello1_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8001
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
# https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello1-vs
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
#  - mesh
  http:
  - name: hello1-v1-route
    match:
    - queryParams:
        route-v:
          exact: v1
    route:
    - destination:
        host: hello1-svc
        subset: hello1v1
  - name: hello1-v2-route
    match:
    - queryParams:
        route-v:
          exact: v2
    route:
    - destination:
        host: hello1-svc
        subset: hello1v2
